@@ -15,7 +15,7 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.transaction.annotation.Transactional;
 
-import javax.persistence.EntityManager;
+import jakarta.persistence.EntityManager;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.Arrays;
@@ -132,7 +132,7 @@ public class Phase3EndToEndTest {
         System.out.println("Testing Demand Forecasting...");
         
         // Get the first book
-        Book book = bookRepository.findAll().get(0);
+        Book book = bookRepository.findAll().getFirst();
         LocalDate forecastDate = LocalDate.now().plusDays(30);
         
         // Generate forecasts
@@ -157,7 +157,7 @@ public class Phase3EndToEndTest {
         forecasts.forEach(f -> {
             assertTrue(f.getPredictedDemand() > 0, 
                 "Forecast for " + f.getAlgorithm() + " should have positive demand");
-            assertTrue(f.getConfidence() > 0, 
+            assertTrue(f.getConfidence().compareTo(java.math.BigDecimal.ZERO) > 0, 
                 "Forecast for " + f.getAlgorithm() + " should have positive confidence");
         });
         
@@ -168,7 +168,7 @@ public class Phase3EndToEndTest {
         System.out.println("Testing Optimal Stock Calculation...");
         
         // Get the first book
-        Book book = bookRepository.findAll().get(0);
+        Book book = bookRepository.findAll().getFirst();
         
         // Calculate optimal stock
         OptimalStockDto optimalStock = optimalStockCalculatorService.calculateOptimalStock(book.getId());
@@ -199,7 +199,7 @@ public class Phase3EndToEndTest {
         
         // Create candidate books with stock data
         List<OptimalStockDto> candidateBooks = Arrays.asList(
-            createTestOptimalStock(books.get(0).getId(), "REORDER_NEEDED"),
+            createTestOptimalStock(books.getFirst().getId(), "REORDER_NEEDED"),
             createTestOptimalStock(books.get(1).getId(), "UNDERSTOCK")
         );
         
@@ -230,7 +230,7 @@ public class Phase3EndToEndTest {
         try {
             // Get test books
             List<Book> books = bookRepository.findAll();
-            List<Long> bookIds = Arrays.asList(books.get(0).getId(), books.get(1).getId());
+            List<Long> bookIds = Arrays.asList(books.getFirst().getId(), books.get(1).getId());
             
             // Test intelligent ordering - this should not fail even if the implementation isn't complete
             try {
